# xorstr

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: xorstr.hpp
tests/: smoke.cpp
